# libcrashreporter-qt

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  CrashReporterQtConfig.cmake.in
src/libcrashreporter-gui/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.h  CrashReporter.ui  CrashReporterGzip.cpp  CrashReporterGzip.h
src/libcrashreporter-handler/: CMakeLists.txt  Handler.cpp  Handler.h
src/libcrashreporter-handler/linux-backtrace-generator/: crqt-kshell.cpp
src/libcrashreporter-launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h
